Finbridge content added

--- a/app/globals.css
+++ b/app/globals.css
@@ -97,7 +97,7 @@
 .user_guide .tab_content ol > ul{
   opacity: 1;
 }
-.tab_btn.Bourse {
+.tab_btn.Finbridge {
   order: 1;
 }
 .tab_btn.Dashboard {
